# ai-code-reviewer

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: review.yml
ai_code_reviewer/: __init__.py  cli.py  config.py  formatters.py  github_action.py  languages.py  models.py  prompts.py  reviewer.py  scanner.py
examples/: cli-usage.sh
tests/: test_reviewer.py
